--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -14,19 +14,20 @@
 }
 
 body {
-  margin: 60px;
-  height: $full-height;
+  margin: 90px 60px;
+  width: calc(100% - 120px);
   @include flex-center;
 }
 
 @media (max-width: $breakpoint-tablet) {
   body {
-    margin: 30px;
+    margin: 90px 30px;
+    width: calc(100% - 60px);
   }
 }
 
 @media (max-width: $breakpoint-mobile) {
   body {
-    height: auto;
+    margin: 70px 30px;
   }
 }
